--- a/MeshViews/MeshSetupTextInputView.xib
+++ b/MeshViews/MeshSetupTextInputView.xib
@@ -53,7 +53,7 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="p1q-0P-ww5" customClass="MeshTextField" customModule="Particle" customModuleProvider="target">
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="p1q-0P-ww5" customClass="ParticleTextField" customModule="Particle" customModuleProvider="target">
                             <rect key="frame" x="8" y="16" width="329" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="Wf7-LK-nkQ"/>
